--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "ps": "^1.0.0",
